# latest-changes

./: .gitignore  Dockerfile  LICENSE  README.md  action.yml  base.dockerfile  pyproject.toml  release-notes.md  requirements-test.txt  requirements.txt
.github/: dependabot.yml
.github/DISCUSSION_TEMPLATE/: questions.yml
.github/ISSUE_TEMPLATE/: config.yml  privileged.yml
.github/workflows/: create-draft-release.yml  docker-push.yml  issue-manager.yml  latest-changes.yml  prepare-release.yml  test.yml  zizmor.yml
app/: __main__.py  latest-changes.jinja2  main.py  model.py  requirements.txt
latest_changes/: __main__.py  latest-changes.jinja2  main.py  model.py
scripts/: prepare_release.py  test.sh
tests/: test_generate_content.py  test_main.py
