[project]
name = "latest-changes"
version = "0.5.0"
description = "Update release notes with the latest changes after a PR is merged."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "email-validator",
    "httpx>=0.28.1,<0.29.0",
    "jinja2",
    "pydantic>=2.13.4",
    "pydantic-settings",
    "pygithub",
]

[dependency-groups]
dev = [
    "coverage[toml]>=7.13.4",
    "pytest>=9.0.2",
    "typer>=0.20.0,<1.0.0",
]
